<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="ch.reinhold.ifolor.uifeatures.registration.RegistrationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".uifeatures.registration.RegistrationActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_name"
            app:error="@{model.nameError}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:startIconContentDescription="@string/prompt_name"
            app:startIconDrawable="@drawable/ic_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:inputType="textCapCharacters|textNoSuggestions"
                android:selectAllOnFocus="true"
                android:text="@={model.name}"
                app:onFocus="@{model.getOnNameFocus()}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            app:error="@{model.emailError}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintVertical_bias="0.04"
            app:startIconContentDescription="@string/prompt_name"
            app:startIconDrawable="@drawable/ic_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:inputType="textNoSuggestions|textEmailAddress"
                android:selectAllOnFocus="true"
                android:text="@={model.email}"
                app:onFocus="@{model.getOnEmailFocus()}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:descendantFocusability="afterDescendants"
            android:hint="@string/prompt_birthday"
            android:onClick="@{model.onClickDate}"
            app:error="@{model.dateError}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintVertical_bias="0.04"
            app:startIconContentDescription="@string/prompt_name"
            app:startIconDrawable="@drawable/ic_calendar_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthdayTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:cursorVisible="false"
                android:focusableInTouchMode="false"
                android:imeActionLabel="@string/registerAction"
                android:imeOptions="actionDone"
                android:inputType="none"
                android:onClick="@{model.onClickDate}"
                android:selectAllOnFocus="true"
                android:text="@={model.formattedDate}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="@{model.isButtonEnabled}"
            android:enabled="@{model.isButtonEnabled}"
            android:minHeight="@dimen/eight_grid_units"
            android:onClick="@{model.getOnRegisterClick()}"
            android:text="@string/registerAction"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/birthday"
            app:layout_constraintVertical_bias="0.06" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
